theme(fix): better contrast for links in meta section

--- a/assets/scss/05-prose/_prose.scss
+++ b/assets/scss/05-prose/_prose.scss
@@ -88,7 +88,11 @@ table {
   @extend .pt-3;
 
   a {
-    @extend .text-secondary;
+    @extend .text-primary;
+
+    &:hover {
+      @extend .text-secondary;
+    }
   }
 }
 
